# fbx-binary-reader

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.adoc
examples/: simple.rs
src/: error.rs  event.rs  lib.rs  property.rs
src/property/: mod.rs
src/reader/: mod.rs  parser.rs
